dataset1235/2025-2/2947369575/users/2435515800/executions/1003782500_704983377.log
== SUBMISSION (2025-08-25 23:33:26)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X % Y)
print("Quociente da divisão real:", X / Y)
print("Produto de X vezes y:", X * Y)
print("Y elevado a terceira potencia:", Y***3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:33:13)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X % Y)
print("Quociente da divisão real:", X / Y)
print("Produto de X veze y:", X * Y)
print("Y elevad a terceira potencia:", Y***3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 7
    print("Y elevad a terceira potencia:", Y***3)
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 7
    print("Y elevad a terceira potencia:", Y***3)
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 7
    print("Y elevad a terceira potencia:", Y***3)
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 7
    print("Y elevad a terceira potencia:", Y***3)
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 7
    print("Y elevad a terceira potencia:", Y***3)
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 7
    print("Y elevad a terceira potencia:", Y***3)
                                              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:29:01)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:34:38)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X%Y)
print("Quociente da divisão real:", X/Y)
print("Produto de X vezes y:", X*Y)
print("Y***3")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:34:37)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X%Y)
print("Quociente da divisão real:", X/Y)
print("Produto de X vezes y:", X*Y)
print("Y***3")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", X//Y)
                                           ^
NameError: name 'X' is not defined. Did you mean: 'x'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:34:01)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X%Y)
print("Quociente da divisão real:", X/Y)
print("Produto de X vezes y:", X*Y)
print("Y elevado a terceira potencia:", Y***3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:37:46)
-- CODE: 
x = int(input())
y = int(input())
print("x//y")
print("x%y")
print("x/y")
print("x*y")
print("y**3")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
y**3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
y**3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
y**3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
y**3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
y**3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
y**3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:38:30)
-- CODE: 
x = int(input())
y = int(input())
print(x//y)
print(x%y)
print(x/y)
print(x*y)
print(y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:33:19)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X % Y)
print("Quociente da divisão real:", X / Y)
print("Produto de X veze y:", X * Y)
print("Y elevado a terceira potencia:", Y***3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:37:42)
-- CODE: 
x = int(input())
y = int(input())
print("x//y")
print("x%y")
print("x/y")
print("x*y")
print("y**3")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
y**3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
y**3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
y**3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
y**3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
y**3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
y**3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:33:57)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X%Y)
print("Quociente da divisão real:", X/Y)
print("Produto de X vezes y:", X*Y)
print("Y elevado a terceira potencia:", Y***3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:37:11)
-- CODE: 
x = int(input())
y = int(input())
print("X//Y")
print("X%Y")
print("X/Y")
print("X*Y")
print("Y**3")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y**3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y**3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y**3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y**3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y**3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y**3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:34:03)
-- CODE: 
x = int(input())
y = int(input())
print("Quociente da divisão inteira:", X//Y)
print("Resto da divisão inteira:", X%Y)
print("Quociente da divisão real:", X/Y)
print("Produto de X vezes y:", X*Y)
print("Y elevado a terceira potencia:", Y***3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 7
    print("Y elevado a terceira potencia:", Y***3)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
